feat: placeDTO 생성